welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: value update is not a member of java.awt.Color
    if (getCouleurSol()=Color.green){
        ^SlugTracking:11: error: Boolean does not take parameters
  return green()
              ^